[package]
name = "cryptop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossterm = "0.27.0"
cursive = "0.20.0"
ratatui = "0.22.0"
serde_json = "1.0.104"
to_precision = "0.1.2"
ureq = { version = "2.7.1", features = ["json"] }
